# libra2-core

./: .dockerignore  .gitignore  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  RELEASE.md  RUST_CODING_STYLE.md  RUST_SECURE_CODING.md  public-keys.yaml
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  devex_rfc.md  feature_request.md
.github/workflows/: adhoc-forge.yaml  aptos-node-release.yaml  cli-e2e-tests.yaml  cli-release.yaml  copy-images-to-dockerhub-nightly.yaml  copy-images-to-dockerhub.yaml  coverage-move-only.yaml  coverage.yaml  docker-build-rosetta.yaml  docker-build-test.yaml  docker-indexer-grpc-test.yaml  faucet-tests-main.yaml  faucet-tests-prod.yaml  find-packages-with-undeclared-feature-dependencies.yaml  forge-stable.yaml  forge-unstable.yaml  fullnode-execute-devnet-main.yaml  fullnode-execute-devnet-stable.yaml  fullnode-fast-devnet-main.yaml  fullnode-fast-devnet-stable.yaml  fullnode-fast-mainnet-main.yaml  fullnode-fast-mainnet-stable.yaml  fullnode-fast-testnet-main.yaml  fullnode-fast-testnet-stable.yaml  fullnode-intelligent-devnet-main.yaml  fullnode-intelligent-mainnet-main.yaml  fullnode-intelligent-mainnet-stable.yaml  fullnode-intelligent-testnet-main.yaml  indexer-grpc-in-memory-cache-benchmark.yaml  indexer-processor-testing.yaml  indexer-protos-sdk-update.yaml  lint-test.yaml  module-verify.yaml  node-api-compatibility-tests.yaml  prover-daily-test.yaml  prune-old-workflow-runs.yaml  replay-verify-legacy.yaml  run-gas-calibration.yaml  rust-client-tests.yaml  workflow-run-docker-rust-build.yaml  (+5 more)
api/: Cargo.toml
api/doc/: CHANGELOG.md  README.md  spec.json  spec.yaml
api/goldens/: aptos_api__tests__transactions_test__test_get_transaction_by_hash_with_delayed_internal_indexer.json  aptos_api__tests__transactions_test__test_get_transactions_output_genesis_transaction.json  aptos_api__tests__transactions_test__test_get_transactions_param_limit_exceeds_limit.json  aptos_api__tests__transactions_test__test_get_transactions_returns_last_page_when_start_version_is_not_specified.json  aptos_api__tests__transactions_test__test_get_txn_execute_failed_by_entry_function_validation.json  aptos_api__tests__transactions_test__test_get_txn_execute_failed_by_invalid_entry_function_address.json  aptos_api__tests__transactions_test__test_simulation_failure_with_detail_error.json  libra2_api__tests__transactions_test__test_get_transactions_output_user_transaction_with_entry_function_payload.json  libra2_api__tests__transactions_test__test_get_txn_execute_failed_by_invalid_entry_function_arguments.json  libra2_api__tests__transactions_test__test_get_txn_execute_failed_by_invalid_entry_function_module_name.json  libra2_api__tests__transactions_test__test_get_txn_execute_failed_by_invalid_entry_function_name.json  libra2_api__tests__transactions_test__test_get_txn_execute_failed_by_missing_entry_function_arguments.json  libra2_api__tests__transactions_test__test_post_bcs_format_transaction.json  libra2_api__tests__transactions_test__test_simulation_failure_with_move_abort_error_rendering.json
api/move-test-package/: Move.toml
api/openapi-spec-generator/: Cargo.toml
api/src/: accounts.rs  basic.rs  bcs_payload.rs  context.rs  (+11 more)
aptos-move/libra2-vm-environment/: Cargo.toml
aptos-move/libra2-vm-environment/src/: environment.rs  gas.rs  natives.rs
aptos-move/libra2-vm-profiling/: Cargo.toml
aptos-move/libra2-vm-profiling/src/: profile_libra2_vm.rs
aptos-node/: Cargo.toml
aptos-node/src/: consensus.rs  indexer.rs  lib.rs  logger.rs  network.rs  services.rs  state_sync.rs  storage.rs  tests.rs  utils.rs
config/: Cargo.toml  README.md
config/global-constants/: Cargo.toml
config/global-constants/src/: lib.rs
config/src/: network_id.rs  utils.rs
config/src/config/: api_config.rs  base_config.rs  config_optimizer.rs  consensus_config.rs  consensus_observer_config.rs  execution_config.rs  identity_config.rs  indexer_config.rs  logger_config.rs  mempool_config.rs  network_config.rs  node_config.rs  quorum_store_config.rs  safety_rules_config.rs  secure_backend_config.rs  state_sync_config.rs  storage_config.rs  transaction_filter_type.rs
consensus/: Cargo.toml  README.md
crates/transaction-generator-lib/: Cargo.toml
crates/transaction-generator-lib/src/: batch_transfer.rs  call_custom_modules.rs  entry_points.rs  lib.rs  p2p_transaction_generator.rs  publish_modules.rs  workflow_delegator.rs
crates/transaction-generator-lib/src/publishing/: entry_point_trait.rs  prebuild_packages.rs  publish_util.rs
dashboards/: blockchain-health.json  component-health-dashboard.json  developer-platform-client-metrics.json  end-to-end-txn-latency.json  execution.json  fullnodes.json  network.json  overview.json  public-fullnodes.json  single-node-view.json  state-sync-v2.json  storage-backup-and-restore.json  storage-details.json  storage-overview.json  validator.json
dkg/: Cargo.toml
docker/: release-images.mjs
execution/: README.md
libra2-move/aptos-gas-calibration/: Cargo.toml
libra2-move/aptos-gas-calibration/src/: measurements_helpers.rs
libra2-move/mvhashmap/: Cargo.toml
libra2-move/mvhashmap/src/: unsync_map.rs  versioned_data.rs  versioned_group_data.rs
libra2-move/mvhashmap/src/unit_tests/: mod.rs  proptest_types.rs
libra2-node/: Cargo.toml
libra2-utils/: Cargo.toml
mempool/: Cargo.toml  README.md
network/: README.md
network/discovery/: Cargo.toml
network/discovery/src/: file.rs  lib.rs  rest.rs  validator_set.rs
scripts/: authenticator_regenerate.sh  cargo_build_aptos_cached_packages.sh  dev_setup.sh  devnet_message.sh  move_docs.sh  windows_dev_setup.ps1
sdk/: Cargo.toml  README.md  publishing.md
state-sync/: README.md
storage/: README.md
testsuite/: exp  forge.py  forge_test.py  indexer_grpc_local.py  parallel_execution_performance.py  sequential_execution_performance.py  single_node_performance.py  single_node_performance_calibration.py  single_node_performance_values.tsv
types/: Cargo.toml
vm-validator/: Cargo.toml
(+2890 files in other folders)
