[package]
name = "aptos-node"
description = "Aptos node"
version = "0.0.0-main"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
aptos-admin-service = { workspace = true }
aptos-api = { workspace = true }
libra2-backup-service = { workspace = true }
libra2-build-info = { workspace = true }
aptos-cached-packages = { workspace = true }
libra2-channels = { workspace = true }
libra2-config = { workspace = true }
aptos-consensus = { workspace = true }
libra2-consensus-notifications = { workspace = true }
libra2-crash-handler = { workspace = true }
libra2-crypto = { workspace = true }
aptos-data-client = { workspace = true }
aptos-data-streaming-service = { workspace = true }
aptos-db = { workspace = true }
libra2-db-indexer = { workspace = true }
libra2-dkg-runtime = { workspace = true }
libra2-event-notifications = { workspace = true }
aptos-executor = { workspace = true }
aptos-framework = { workspace = true }
aptos-genesis = { workspace = true }
aptos-indexer = { workspace = true, optional = true }
aptos-indexer-grpc-fullnode = { workspace = true }
aptos-indexer-grpc-table-info = { workspace = true }
libra2-infallible = { workspace = true }
aptos-inspection-service = { workspace = true }
aptos-jwk-consensus = { workspace = true }
libra2-logger = { workspace = true, features = ["node-identity"] }
aptos-mempool = { workspace = true }
aptos-mempool-notifications = { workspace = true }
aptos-network = { workspace = true }
aptos-network-benchmark = { workspace = true }
aptos-network-builder = { workspace = true }
libra2-node-identity = { workspace = true }
aptos-peer-monitoring-service-client = { workspace = true }
aptos-peer-monitoring-service-server = { workspace = true }
aptos-peer-monitoring-service-types = { workspace = true }
aptos-runtimes = { workspace = true }
aptos-state-sync-driver = { workspace = true }
libra2-storage-interface = { workspace = true }
libra2-storage-service-client = { workspace = true }
libra2-storage-service-notifications = { workspace = true }
libra2-storage-service-server = { workspace = true }
libra2-storage-service-types = { workspace = true }
aptos-telemetry = { workspace = true }
libra2-temppath = { workspace = true }
libra2-time-service = { workspace = true }
libra2-types = { workspace = true }
aptos-validator-transaction-pool = { workspace = true }
aptos-vm = { workspace = true }
aptos-vm-environment = { workspace = true }
bcs = { workspace = true }
clap = { workspace = true }
either = { workspace = true }
fail = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
num_cpus = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
rlimit = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }

[target.'cfg(unix)'.dependencies]
jemallocator = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
rstack-self = { workspace = true }

[features]
assert-private-keys-not-cloneable = ["libra2-crypto/assert-private-keys-not-cloneable"]
check-vm-features = []
consensus-only-perf-test = ["aptos-executor/consensus-only-perf-test", "aptos-mempool/consensus-only-perf-test", "aptos-db/consensus-only-perf-test"]
default = []
failpoints = ["fail/failpoints", "aptos-consensus/failpoints", "aptos-executor/failpoints", "aptos-mempool/failpoints", "aptos-api/failpoints", "libra2-config/failpoints"]
indexer = ["aptos-indexer"]
tokio-console = ["libra2-logger/tokio-console", "libra2-config/tokio-console"]
smoke-test = ["aptos-jwk-consensus/smoke-test", "libra2-dkg-runtime/smoke-test"]

[package.metadata.cargo-machete]
ignored = ["libra2-crypto"]
