[package]
name = "libra2-vm-environment"
description = "Libra2 VM environment"
version = "0.0.1"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
aptos-framework = { workspace = true }
libra2-gas-algebra = { workspace = true }
aptos-gas-schedule = { workspace = true }
aptos-move-stdlib = { workspace = true }
libra2-native-interface = { workspace = true }
aptos-table-natives = { workspace = true }
libra2-types = { workspace = true }
libra2-vm-types = { workspace = true }
bcs = { workspace = true }
move-binary-format = { workspace = true }
move-bytecode-verifier = { workspace = true }
move-core-types = { workspace = true }
move-vm-runtime = { workspace = true }
move-vm-types = { workspace = true }
once_cell = { workspace = true }
sha3 = { workspace = true }

[dev-dependencies]
libra2-types = { workspace = true, features = ["testing", "fuzzing"] }
serde = { workspace = true }
