[package]
name = "libra2-transaction-generator-lib"
description = "Library for Libra2 transaction generator"
version = "0.0.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
libra2-framework = { workspace = true }
libra2-infallible = { workspace = true }
libra2-logger = { workspace = true }
aptos-sdk = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
move-binary-format = { workspace = true }
once_cell = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
