[package]
name = "aptos-mvhashmap"
description = "Move hash map"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
libra2-aggregator = { workspace = true }
libra2-crypto = { workspace = true }
libra2-types = { workspace = true }
libra2-vm-types = { workspace = true }
bytes = { workspace = true }
claims = { workspace = true }
crossbeam = { workspace = true }
dashmap = { workspace = true }
move-binary-format = { workspace = true }
move-core-types = { workspace = true }
move-vm-runtime = { workspace = true }
move-vm-types = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
libra2-aggregator = { workspace = true, features = ["testing"] }
move-vm-runtime = { workspace = true }
proptest = { workspace = true }
proptest-derive = { workspace = true }
rayon = { workspace = true }
test-case = { workspace = true }
