[package]
name = "aptos-network-discovery"
description = "Aptos Network Peer Discovery"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
libra2-channels = { workspace = true }
libra2-config = { workspace = true }
aptos-crypto = { workspace = true }
aptos-event-notifications = { workspace = true }
libra2-logger = { workspace = true }
libra2-metrics-core = { workspace = true }
aptos-network = { workspace = true }
aptos-rest-client = { workspace = true }
libra2-short-hex-str = { workspace = true }
libra2-time-service = { workspace = true }
aptos-types = { workspace = true }
bcs = { workspace = true }
futures = { workspace = true }
once_cell = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }

[dev-dependencies]
libra2-config = { workspace = true, features = ["testing"] }
aptos-netcore = { workspace = true, features = ["fuzzing"] }
libra2-temppath = { workspace = true }
rand = { workspace = true }
